@@ -13,7 +13,11 @@
 #include "peerfile.h"
 
 
-static time_t peerfile_time = 0; /* Next time to import peers from peer file */
+/* Next time to import peers from peer file */
+static time_t peerfile_import_time = 0;
+
+/* Next time to export peers to peer file  */
+static time_t peerfile_export_time = 0;
 
 
 void peerfile_export( void ) {
@@ -113,16 +117,25 @@ void peerfile_import( void ) {
 
 void peerfile_handle_peerfile( int _rc, int _sock ) {
 
-	if( peerfile_time <= time_now_sec() && kad_count_nodes() == 0 ) {
+	if( peerfile_import_time <= time_now_sec() && kad_count_nodes() == 0 ) {
 		/* Ping peers from peerfile, if present */
 		peerfile_import();
 
 		/* Try again in ~5 minutes */
-		peerfile_time = time_add_min( 5 );
+		peerfile_import_time = time_add_min( 5 );
+	}
+
+	if( peerfile_export_time <= time_now_sec() && kad_count_nodes() != 0 ) {
+		/* Export peers */
+		peerfile_export();
+
+		/* Try again in 24 hours */
+		peerfile_export_time = time_add_hour( 24 );
 	}
 }
 
 void peerfile_setup( void ) {
-	peerfile_time = time_now_sec() + 10;
+	peerfile_import_time = time_now_sec() + 10;
+	peerfile_export_time = time_now_sec();
 	net_add_handler( -1 , &peerfile_handle_peerfile );
 }
